# dune_exercise

./: .gitignore  README.md
cppVersion/: CMakeLists.txt
cppVersion/src/: BenchmarkMetrics.h  BenchmarkTimer.cpp  BenchmarkTimer.h  ChunkedFileStrategy.cpp  ChunkedFileStrategy.h  ConcurrentBenchmark.cpp  ConcurrentBenchmark.h  DataGenerator.cpp  DataGenerator.h  DataValidator.cpp  DataValidator.h  IndividualFileStrategy.cpp  IndividualFileStrategy.h  Record.h  SingleFileStrategy.cpp  SingleFileStrategy.h  StorageStrategy.cpp  StorageStrategy.h  SystemUtils.cpp  SystemUtils.h  main.cpp
pythonVersion/: storage_benchmark.ipynb
